[tool.poetry]
name = "repl_nix_ChatGPT-Trading-Bot-for-KuCoin"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^3.0.30"
openai = "^0.27.2"
talib-binary = "^0.4.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
